# legendary-memory

./: .gitignore  README.md  WORKLOG.md  pyproject.toml
docs/: ARCHITECTURE.md
gateway/: app.py  main.py
services/auth/: app.py  crud.py  database.py  main.py  models.py  routers.py  schemas.py  security.py
services/echo/: app.py  main.py  routers.py
tests/: test_auth.py  test_echo.py
